# C_basics_course_Bro_code_Youtube

./: README.md  ex06ArithmeticOperators  ex07AugmentedAssignmentOper  ex08UserInput  ex09MathFunctions  ex10Circumference  ex5Constants  header42.sh  shell_basic_commands.txt  tests
BASH-TheBornAgainShell/: notes.txt
Bro_code_C_programming_course/: ex05Constants.c  ex06ArithmeticOperators.c  ex09MathFunctions.c  ex14TempConversionProgram.c  ex15CalculaterProgram.c  ex17Arguments.c  ex18Return.c  ex23WhileLoop.c  ex24DoWhile.c  ex25NestedLoops.c  ex27Arrays.c  ex30ArrayStrings.c  ex31SwapValueVariables.c  ex32SortArray.c  ex35ArrayStruct.c  ex36Enums.c  ex37RandomNumbers.c  ex38NumGuessGame.c  ex39QuizGame.c  ex40BitWiseOperator.c  ex41MemoryAddress.c  ex42Pointers.c  ex44TicTacToeGame.c  tests.c
C Files/: executable  library.c  notes.txt
C Files/untitled2/: CMakeLists.txt  formatSpecifiers.c  library
C-Basics/: notes.txt
C-Basics/untitled2/: CMakeLists.txt  dataTypes  ex01HelloWorld.c  ex03dataTypes.c  ex04FormatSpecifiers.c  ex07AugmentedAssignmentOper.c  ex08UserInput.c  ex10Circumference.c  ex12If.c  ex13Switch.c  ex16Function.c  ex19TernaryOper.c  ex20FunctionPrototypes.c  ex21StringFunctions.c  ex22ForLoop.c  ex26ContinueBreak.c  ex28ForEach.c  ex29Array2D.c  ex2library  ex33Strucks.c  ex34TypeDef.c  ex42WritingFiles.c  ex43ReadingFiles.c  ex44TicTacToeGame.c  ex4FormatSpecifiers  hypotenusaRightTria.c
C_Programming_Exercises/: ex01FindMinNumInArray.c  ex02FindMaxNumArray.c  ex03ValueNumOccurencesInArray.c
Linux4Hackers/: notesNetworkChuck.txt
